--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.4.1",
+    "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/pwa": "^2.6.0",
     "cross-env": "^5.2.0",
     "flexboxgrid": "^6.3.1",
     "hooper": "^0.1.2",
     "nuxt": "^2.4.0",
-    "vue-scrollto": "^2.15.0"
+    "vue-i18n": "^8.11.2",
+    "vue-scrollto": "^2.15.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
